@@ -25,3 +25,4 @@ GMailCS=Crypt and Send
 GMailSOK=The first sign of this is mail is 
 GMailNoS=No sign found in this mail !
 GMailSErr=The first sign of this mail is wrong !
+GMailD=This mail has been decrypted !
